# itmo

./: README.md
algo/sem1/lab1/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp
algo/sem1/lab2/: Formation.java  Hospital.java  Kenobi.java  brackets.cpp  bureaucracy.cpp  decode.cpp  decode2.cpp  dsu.cpp  hemoglobin.cpp  postfix.cpp  saloon.cpp  stackmin.cpp
algo/sem1/lab3/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp
algo/sem2/lab1/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp
algo/sem2/lab2/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp
algo/sem2/lab3/: A.cpp  B.cpp  C.cpp  H.cpp
algo/sem3/lab1/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp
algo/sem3/lab2/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp
algo/sem3/lab3/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp  M.cpp
algo/sem4/lab1/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp
algo/sem4/lab2/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
algo/sem4/lab3/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
asm/: print.asm
complexity/: A-checker.py  A.cpp  B.cpp
cpp-2018/bigint/: CMakeLists.txt  big_integer.cpp  big_integer.h  main.cpp
cpp-2018/bigintopt/: CMakeLists.txt  big_integer.cpp  big_integer.h  main.cpp
cpp-2018/bigintopt/myvector/: myvector.cpp  myvector.h
cpp-2018/circbuffer/: CMakeLists.txt  circular_buffer.h  main.cpp  testing.cpp
cpp-2018/dupsearch/: README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  search.cpp  search.h
cpp-2018/function/: CMakeLists.txt  README.md  function.h  main.cpp
cpp-2018/helloasm/: mul.asm  sub.asm
cpp-2018/huffman/: CMakeLists.txt
cpp-2018/huffman/lib/: decoder.cpp  decoder.h  encoder.cpp  encoder.h  tree.cpp  tree.h
cpp-2018/huffman/test/: huftest.cpp
cpp-2018/huffman/util/: accumulator.cpp  accumulator.h  compressor.cpp  compressor.h  decompressor.cpp  decompressor.h  main.cpp
cpp-2018/huffman/util/file/: file_reader.cpp  file_reader.h  file_writer.cpp  file_writer.h
cpp-2018/tuple/: CMakeLists.txt  main.cpp  tuple.h
crypto/HW1/: Makefile  decryptor.cpp  encryptor.cpp
crypto/HW1/test/: test1  test3
crypto/HW2/: DES.cpp  Makefile
crypto/HW3/: Makefile  RC6.cpp
crypto/HW4/: Makefile  RC4.cpp
crypto/HW5/: Makefile  comp.cpp
db/1-4/: 2.sql  4.sql
db/5/: 1.1.ra  1.2.ra  2.1.ra  2.1.sql  2.2.ra  2.2.sql  3.1.ra  3.1.sql  3.2.ra  3.2.sql  4.1.ra  4.1.sql  4.2.ra  4.2.sql  5.1.ra  5.1.sql  5.2.ra  5.2.sql  5.3.ra  5.3.sql  6.1.ra  6.2.ra  6.3.ra  7.1.ra  7.1.sql  7.2.ra  8.1.sql  8.2.sql
db/6/: 1.1.dl  1.2.dl  1.2.sql  1.3.dl  1.3.sql  2.1.dl  2.1.sql  2.2.dl  2.2.sql  2.3.dl  2.3.sql  3.1.dl  3.1.sql  3.2.dl  3.2.sql  4.1.dl  4.1.sql  4.2.dl  4.2.sql  4.3.dl  4.3.sql  4.4.dl  4.4.sql  5.1.dl  5.1.sql  5.2.dl  5.2.sql  all.txt
db/7/: create.sql  solution.sql
db/course_work/: data.sql  ddl.sql  rm.sql  selects.sql  test.sql  updates.sql
db/queries/: 1.1.ra  1.1.sql  1.2.ra  1.2.sql  1.3.ra  1.3.sql  1.4.ra  1.4.sql  1.5.ra  1.5.sql  1.6.ra  1.7.ra  2.1.dl  2.1.sql  2.2.dl  2.2.sql  2.3.dl  2.3.sql  2.4.dl  2.4.sql  2.5.dl  3.1.sql  3.2.sql
discrete/sem1/lab1/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
discrete/sem1/lab2/: Lzw.java  bwt.cpp  huffman.cpp  mtf.cpp
discrete/sem1/lab3/: allvectors.cpp  antigray.cpp  brackets.cpp  brackets2num.cpp  brackets2num2.cpp  chaincode.cpp  choose.cpp  choose2num.cpp  gray.cpp  nextbrackets.cpp  nextchoose.cpp  nextmultiperm.cpp  nextpartition3.cpp  nextperm.cpp  nextsetpartition.java  nextvector.cpp  num2brackets.cpp  num2brackets2.cpp  num2choose.cpp  num2part.cpp  num2perm.cpp  part2num.cpp  part2sets.cpp  partition.cpp  perm2num.cpp  permutations.cpp  subsets.cpp  telemetry.cpp  vectors.cpp
discrete/sem2/lab1/: A.cpp  B.cpp  C.cpp  D.cpp
discrete/sem2/lab2/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp
discrete/sem2/lab3/: A.cpp  B.cpp  D.cpp
discrete/sem3/lab1/: A.cpp  B.cpp  C.cpp  D.cpp
discrete/sem3/lab2/: A.cpp  D.cpp
discrete/sem3/lab3/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
discrete/sem4/lab1/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
discrete/sem4/lab2/: aplusb.out  aplusb_.out  balanced.out  convertto2.out  less.out  mirror.out  multiplication.out  postfixlogic.out  reverse.out  tandem.out
fp/: README.md
fp/hw0/: README.md  hw0.cabal
fp/hw0/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
fp/hw1/: hw1.cabal
fp/hw1-second-chance/: README.md  hw1-second-chance.cabal
fp/hw1-second-chance/src/Parsers/: Combinator.hs
fp/hw1-second-chance/test/: ParsersSpec.hs
fp/hw1/test/: AlgebraicSpec.hs  FoldingSpec.hs  MonoidsSpec.hs
fp/hw2/: README.md  hw2.cabal
fp/hw2/app/: Main.hs
fp/hw2/src/: FileSystem.hs
fp/hw3/: LICENSE  README.md  hw3.cabal
fp/hw3/bench/: Benchmark.hs
fp/hw3/src/: Task1.hs  Task5.hs  Task6.hs  Task7.hs
fp/hw3/test/: Task1Spec.hs
machine-learning/CF/: A.py  B.py  C.py  D.cpp  E.cpp  F.cpp  G.rs  H.rs  I.rs  L.cpp  M.cpp  M.rs  N.cpp  O.rs  P.rs  Q.rs
machine-learning/labs/Bayes/: notebook.ipynb
machine-learning/labs/Boost/: notebook.ipynb
math-logic-2019/: README.md
math-logic-2019/HW1/: Makefile
math-logic-2019/HW3/: Makefile  input.txt
methods-trans-2019/HW1/: 101.pl  102.pl  103.pl  104.pl  105.pl  106.pl  107.pl  108.pl  109.pl  110.pl  203.pl  204.pl  205.pl  206.pl  207.pl  208.pl  209.pl  210.pl  301.pl  302.pl  303.pl
methods-trans-2019/HW2/: CMakeLists.txt  grammar.txt  lexer.h  main.cpp  parser.h  test.cpp  tree.h
methods-trans-2019/HW3/: Makefile  grammar.txt
ml-social/lab1/: Presentation (lab 1 + 2).pptx  lab.ipynb
mpp/distributed-fifo-Tindarid/: solution.txt
mpp/possible-executions-analysis-Tindarid/: solution.txt
os-2019/net-descriptor-passing/: Makefile  client.cpp  server.cpp
pds/distributed-consensus-error-Tindarid/: solution.txt
teor-inf-2021/lab1/: coder.cpp  entropy.cpp  gen.cpp
tt-2019/HW3/: Makefile  test3.txt  test4.txt
(+108 files in other folders)
