name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com/fp-ctd-itmo/hw2-Tindarid
license:             MIT
license-file:        LICENSE
author:              Nursan Valeyev
maintainer:          tindarid@gmail.com
copyright:           2020 Nursan Valeyev

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     FileSystem
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , directory
                     , transformers
                     , filepath
  default-language:    Haskell2010

executable hw2
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw2
                     , optparse-applicative
                     , mtl
  default-language:    Haskell2010
